
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int new_type (int x) {
  switch (x) {
    case 1: return 21;
    case 2: return 22;
    case 3: return 20;
    case 4: return 23;
    case 5: return 24;
    default:
      break;
  }
  return 33;

}
